Correct letterspacing of headings

--- a/css/main.css
+++ b/css/main.css
@@ -20,11 +20,13 @@ h1 {
   font-style: italic;
   font-size: 1.8rem;
   font-weight: normal;
+  letter-spacing: -.15px;
 }
 
 p {
   margin: 0 0 1.5rem;
   padding: 0 1rem;
+  letter-spacing: .15px;
 }
 
 h2 {
@@ -33,6 +35,7 @@ h2 {
   font-weight: normal;
   padding: 0 1rem;
   margin: 0;
+  letter-spacing: -.15px;
 }
 
 h3 {
@@ -41,6 +44,7 @@ h3 {
   font-weight: normal;
   padding: 0 1rem;
   margin: 1rem 0 0;
+  letter-spacing: -.15px;
 }
 
 dl {
@@ -52,6 +56,7 @@ dl, dt {
   font-style: italic;
   padding: 0;
   margin: 0;
+  letter-spacing: -.15px;
 }
 
 dl, dd {
@@ -75,7 +80,7 @@ body {
   padding: .4rem 0;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 4rem;
+  grid-template-rows: 1fr 5.25rem;
   grid-area: banner;
 }
 
